--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     alt="imagem da App store">
                 <img class="imgs-lojas" id="img-google"
                     src="https://www.instagram.com/static/images/appstore-install-badges/badge_android_portuguese_brazilian-pt_BR.png/2f2a0c05b2f3.png"
-                    alt="Imagem da Google Play">
+                    alt="Imagem do Google Play">
             </div>
         </div>
     </section>
